--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vscode"]
 	path = vscode
-	url = https://github.com/japillajo/vscode.git
+	url = https://github.com/japc-learning/vscode.git
